[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://scripts/case_08/fr8_final_report_c.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://bc6epa3jyjbri" path="res://ui/theme_terminal_amber.tres" id="2_theme"]
[ext_resource type="Shader" path="res://ui/shaders/crt_overlay.gdshader" id="3_shader"]
[ext_resource type="PackedScene" path="res://scenes/ui/InspectorPopup.tscn" id="4_popup"]
[ext_resource type="PackedScene" path="res://scenes/ui/InspectBadge.tscn" id="5_badge"]

[sub_resource type="ShaderMaterial" id="1_overlay_material"]
shader = ExtResource("3_shader")
shader_parameter/tint_color = Color(1, 0.7, 0.1, 1)
shader_parameter/intensity = 0.13
shader_parameter/fx_quality = 0
shader_parameter/glitch_strength = 0.0

[node name="FR8_FinalReportC" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.06, 0.06, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="CRT_Overlay" type="ColorRect" parent="CanvasLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
material = SubResource("1_overlay_material")
color = Color(1, 1, 1, 1)

[node name="SafeArea" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="MainLayout" type="VBoxContainer" parent="SafeArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="SafeArea/MainLayout"]
custom_minimum_size = Vector2(0, 62)
layout_mode = 2
theme_override_constants/separation = 10

[node name="BtnBack" type="Button" parent="SafeArea/MainLayout/Header"]
custom_minimum_size = Vector2(116, 56)
layout_mode = 2
text = "НАЗАД"

[node name="TitleLabel" type="Label" parent="SafeArea/MainLayout/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "ДЕЛО #8: ФИНАЛЬНЫЙ ОТЧЁТ [C]"
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="SafeArea/MainLayout/Header"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
text = "C"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StabilityBar" type="ProgressBar" parent="SafeArea/MainLayout/Header"]
custom_minimum_size = Vector2(210, 24)
layout_mode = 2
size_flags_vertical = 4
value = 100.0
show_percentage = false

[node name="BriefingCard" type="PanelContainer" parent="SafeArea/MainLayout"]
layout_mode = 2

[node name="BriefingLabel" type="Label" parent="SafeArea/MainLayout/BriefingCard"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
text = "Брифинг"
autowrap_mode = 3
vertical_alignment = 1

[node name="Body" type="BoxContainer" parent="SafeArea/MainLayout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="CodeCard" type="PanelContainer" parent="SafeArea/MainLayout/Body"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CodeVBox" type="VBoxContainer" parent="SafeArea/MainLayout/Body/CodeCard"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="CodeTitle" type="Label" parent="SafeArea/MainLayout/Body/CodeCard/CodeVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "КОД"

[node name="HtmlLabel" type="RichTextLabel" parent="SafeArea/MainLayout/Body/CodeCard/CodeVBox"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
fit_content = false
scroll_active = false
text = "HTML"

[node name="CssLabel" type="RichTextLabel" parent="SafeArea/MainLayout/Body/CodeCard/CodeVBox"]
custom_minimum_size = Vector2(0, 170)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
fit_content = false
text = "CSS"

[node name="HintRow" type="HBoxContainer" parent="SafeArea/MainLayout/Body/CodeCard/CodeVBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="InspectBadge" parent="SafeArea/MainLayout/Body/CodeCard/CodeVBox/HintRow" instance=ExtResource("5_badge")]
layout_mode = 2

[node name="HintLine" type="Label" parent="SafeArea/MainLayout/Body/CodeCard/CodeVBox/HintRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Нажмите по селектору для ПРОСМОТРА."
vertical_alignment = 1

[node name="DecryptCard" type="PanelContainer" parent="SafeArea/MainLayout/Body"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DecVBox" type="VBoxContainer" parent="SafeArea/MainLayout/Body/DecryptCard"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="DecTitle" type="Label" parent="SafeArea/MainLayout/Body/DecryptCard/DecVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "ДЕШИФРАТОР"

[node name="TargetPreview" type="Label" parent="SafeArea/MainLayout/Body/DecryptCard/DecVBox"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 26
text = "Секретный код"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StrengthRow" type="HBoxContainer" parent="SafeArea/MainLayout/Body/DecryptCard/DecVBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="AttackBar" type="ProgressBar" parent="SafeArea/MainLayout/Body/DecryptCard/DecVBox/StrengthRow"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
max_value = 11000.0
show_percentage = false

[node name="DefenseBar" type="ProgressBar" parent="SafeArea/MainLayout/Body/DecryptCard/DecVBox/StrengthRow"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
max_value = 11000.0
show_percentage = false

[node name="OptionsVBox" type="VBoxContainer" parent="SafeArea/MainLayout/Body/DecryptCard/DecVBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="ExplainLabel" type="Label" parent="SafeArea/MainLayout/Body/DecryptCard/DecVBox"]
custom_minimum_size = Vector2(0, 58)
layout_mode = 2
size_flags_horizontal = 3
text = "Объяснение"
autowrap_mode = 3
vertical_alignment = 1

[node name="StatusLabel" type="Label" parent="SafeArea/MainLayout"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
text = "Статус"
autowrap_mode = 2
vertical_alignment = 1

[node name="BottomBar" type="HBoxContainer" parent="SafeArea/MainLayout"]
custom_minimum_size = Vector2(0, 62)
layout_mode = 2
theme_override_constants/separation = 10

[node name="BtnReset" type="Button" parent="SafeArea/MainLayout/BottomBar"]
custom_minimum_size = Vector2(170, 56)
layout_mode = 2
text = "СБРОС"

[node name="BtnConfirm" type="Button" parent="SafeArea/MainLayout/BottomBar"]
custom_minimum_size = Vector2(220, 56)
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "ПОДТВЕРДИТЬ"

[node name="BtnNext" type="Button" parent="SafeArea/MainLayout/BottomBar"]
custom_minimum_size = Vector2(180, 56)
layout_mode = 2
disabled = true
text = "ДАЛЕЕ"

[node name="InspectorPopup" parent="." instance=ExtResource("4_popup")]

